added all links

--- a/FAQ.html
+++ b/FAQ.html
@@ -26,21 +26,39 @@
     <!-- Content start -->
     <!-- Header -->
     <section class="header-container bg-dark">
-        <header
-            class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 border-bottom">
-            <a href="/" class="d-flex align-items-center col-md-3 mb-md-0 text-dark text-decoration-none">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark text-center">
+            <div class="container-fluid text-center">
                 <img class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"
                     src="./imgs/WPTI_Icon_White.png"></img>
-            </a>
-            <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 pe-3">
-                <li><a href="./index.html" class="nav-link px-2 link-light">Home</a></li>
-                <li><a href="./gallery.html" class="nav-link px-2 link-secondary">Galleries</a></li>
-                <li><a href="./index.html#artists" class="nav-link px-2 link-light">Artists</a></li>
-                <li><a href="./index.html#contact" class="nav-link px-2 link-light">Contact</a></li>
-                <li><a href="./FAQ.html" class="nav-link px-2 link-light">FAQs & Aftercare</a></li>
-                <li><a href="./our-story.html" class="nav-link px-2 link-light">Our Story</a></li>
-            </ul>
-        </header>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon "></span>
+                </button>
+                <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-center ">
+                        <li class="nav-item">
+                            <a href="./index.html" class="nav-link px-2 link-light">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./gallery.html" class="nav-link px-2 link-light">Galleries</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./index.html#artists" class="nav-link px-2 link-light">Artists</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./index.html#contact" class="nav-link px-2 link-light">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./FAQ.html" class="nav-link px-2 link-light">FAQ & Aftercare</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./our-story.html" class="nav-link px-2 link-light">Our Story</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </section>
     <section id='faq' class="FAQ-container bg-dark">
         <div class="header-container bg-dark border-bottom">
@@ -294,7 +312,7 @@
     <div class="container">
         <footer class="py-3 my-4 text-light">
             <div>
-                <a href="#faq" class="text-success text-decoration-none text-center text">
+                <a href="#home" class="text-success text-decoration-none text-center text">
                     <p class="text-success text-decoration-none text-center text">Back to Top</p>
                 </a>
             </div>
@@ -311,7 +329,7 @@
             <div class="container-md">
                 <div class="row">
                     <div class="pt-3 pb-3 col text-center">
-                        <i class="fa-2xl p-2 fa-brands fa-instagram"></i>
+                        <a target="_blank" href="https://www.instagram.com/whitepinetattoos/?hl=en"><i class="fa-2xl p-2 fa-brands fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
