--- a/gallery.html
+++ b/gallery.html
@@ -5,6 +5,7 @@
     <!-- Bootstrap CDN-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Masonry -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./style.css">
@@ -18,9 +19,6 @@
 </head>
 
 <body>
-    <div class="wrapper">
-        <!-- Content start -->
-        <!-- Header -->
          <section class="header-container bg-dark">
             <nav class="navbar navbar-expand-md navbar-dark bg-dark text-center">
                 <div class="container-fluid text-center">
@@ -65,12 +63,15 @@
                         </div>
                         <div class="container border-top pt-3 pb-3">
                             <div class="row pe-2 ps-2">
-                                <div class="col-6 text-start">
+                                <div class="col-4 text-start">
                                     <a href="./index.html" class="back text-decoration-none text-light">
                                         <h5 class=""> ← Go Back</h5>
                                     </a>
                                 </div>
-                                <div class=" col-6 text-end">
+                                <div class="col-4">
+                                    <h4 id="artistHeader" class="text-light text-center">All</h4>
+                                </div>
+                                <div class=" col-4 text-end">
                                     <label class="text-light" for="artist">Artist: </label>
                                     <select name="artist" class="ps-1 pe-5" id="artistSelect">
                                         <option value="Anne" id="Anne">Anne</option>
@@ -86,15 +87,42 @@
         </section>
         <div class="header-container bg-dark">
             <div class="container">
-                <div class="row content-row" id='contentRow'>
-                    <div id="contentContainer">
+                <div class="row content-row " id='contentRow'>
+                    <div class="d-flex justify-content-center" id="contentContainer">
 
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-    </div>
+        <section class="footer-container bg-dark ">
+            <div class="container">
+                <footer class="py-3 my-4 text-light">
+                    <div>
+                        <a href="#gallery" class="text-success text-decoration-none text-center text">
+                            <p class="text-success text-decoration-none text-center text">Back to Top</p>
+                        </a>
+                    </div>
+
+                        <ul class="d-flex flex-wrap justify-content-center me-auto mb-2 mb-lg-0 border-top pt-4 ps-0">
+                            <a href="./index.html" class=" px-2 link-light">Home</a>
+                            <a href="./gallery.html" class=" px-2 link-light">Galleries</a>
+                            <a href="./index.html#artists" class="px-2 link-light">Artists</a>
+                            <a href="./index.html#contact" class="px-2 link-light">Contact</a>
+                            <a href="./FAQ.html" class=" px-2 link-light">FAQ & Aftercare</a>
+                            <a href="./our-story.html" class="px-2 link-light">Our Story</a>
+                    </ul>
+
+                    <div class="container-md">
+                        <div class="row">
+                            <div class="pt-3 pb-3 col text-center">
+                                <a target="_blank" href="https://www.instagram.com/whitepinetattoos/?hl=en"><i class="fa-2xl p-2 fa-brands fa-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <p class="text-center text-light">© 2023 White Pine Tattoo, Inc</p>
+                </footer>
+            </div>
+        </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
