changed working hours

--- a/gallery.html
+++ b/gallery.html
@@ -74,7 +74,7 @@
                                 <div class=" col-4 text-end">
                                     <label class="text-light" for="artist">Artist: </label>
                                     <select name="artist" class="ps-1 pe-5" id="artistSelect">
-                                        <option value="Anne" id="Anne">Anne</option>
+                                        <option value="Anna" id="Anna">Anna</option>
                                         <option value="Jeff" id="Jeff">Jeff</option>
                                         <option value="All" id="All"selected>All</option>
                                     </select>
