--- a/our-story.html
+++ b/our-story.html
@@ -80,7 +80,7 @@
             <div class="row">
                 <div class="col-12 col-md-6">
                     <p>
-                        Anne and Jeff Shepherd are the happily married couple who founded our friendly, atmospheric
+                        Anna and Jeff Shepherd are the happily married couple who founded our friendly, atmospheric
                         tattoo shop located in the charming town of Tiny, Ontario. They have followed their dreams of
                         creating a community hub for tattoo enthusiasts, where clients can relax and connect with others
                         who share their love of tattoos.
