--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 
 <head>
     <meta charset="utf-8">
-    <title>White Pine Tattoo | Book today! </title> <!-- TODO: update page title -->
-    <meta name="description" content=""> <!-- TODO: update meta description -->
+    <title>White Pine Tattoo | Book today! </title> 
+    <meta name="description" content="White Pine Tattoos is Ontario's premier destination for exceptional body art. Our experienced artists specialize in custom designs that bring your vision to life. From bold and intricate pieces to delicate and minimalist styles, we cater to every taste. Visit us at whitepinetattoos.ca to book your consultation today and let us help you make a lasting impression.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="/favicon.ico"> <!-- TODO: Add favicon.ico file to project -->
+    <link rel="icon" href="./favicon.png"> 
+    <link rel="icon" href="favicon.png"> 
+
     <!-- Bootstrap CDN-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
