--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
     <link rel="stylesheet" href="./style.css">
     <!-- FA CDN -->
     <script src="https://kit.fontawesome.com/9de7b5c7f4.js" crossorigin="anonymous"></script>
+    <!-- google tag -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-61889CTF4B">
+    </script>
+    <script async>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+      
+        gtag('config', 'G-61889CTF4B');
+      </script>
 </head>
 
 <body>
@@ -182,7 +192,7 @@
                 </div>
             </div>
         </section>
-        <section id="connect" class="connect-container pt-3 pb-5 bg-dark">
+        <section id="connect" class="connect-container pt-3 pb-5">
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center">
@@ -193,7 +203,7 @@
             <div class="container-md">
                 <div class="row">
                     <div class="fa-xl pt-3 col text-center">
-                        <a target="_blank" href="https://www.instagram.com/whitepinetattoos/?hl=en"><i
+                        <a target="_blank" href="https://www.instagram.com/whitepinetattoo/"><i
                                 class="fa-2xl p-2 fa-brands fa-instagram"></i></a>
                     </div>
                 </div>
@@ -202,13 +212,11 @@
         <section id="contact" class="contact-container bg-dark">
             <div class="container">
                 <div class="container">
-                    <div class="row">
-                        <h2 class="contact-text text-center">Want to book an appointment? fill out this form and we will
-                            get back to
-                            you
-                            as soon as possible.</h2>
+                    <div class="row mb-4">
+                        <h2 class="contact-text text-center mt-4"> </h2>
                         <div class="container d-flex justify-content-center col-12 col-md-6">
                             <div class="row">
+                                <h3 class="contact-text text-center text-light">Want to schedule an appointment?</h3>
                                 <form action="https://formspree.io/f/mvonqrwa" method="POST">
                                     <input class="col-12" type="name" name="name" placeholder="name" required>
                                     <input class="col-12" type="email" name="email" placeholder="Email address:" required>
@@ -216,10 +224,10 @@
                                     <textarea class="col-12" placeholder="Your message..." name="message" rows="6" minlength="50"></textarea>
                                     <button class=" col-12 btn btn-submit btn-primary" type="submit">Send</button>
                                 </form>
-                                <h3 class="phone-num text-center text-white link-light text-decoration-none contact-text mt-4">
+                                <h4 class="phone-num text-center text-light link-light text-decoration-none contact-text mt-4">
                                     Or contact
                                     us at: whitepinetattoos@gmail.com
-                                </h3>
+                                </h4>
                             </div>
                             
                         </div>
@@ -344,7 +352,7 @@
                     <div class="container-md">
                         <div class="row">
                             <div class="pt-3 pb-3 col text-center">
-                                <a target="_blank" href="https://www.instagram.com/whitepinetattoos/?hl=en"><i
+                                <a target="_blank" href="https://www.instagram.com/whitepinetattoo/"><i
                                         class="fa-2xl p-2 fa-brands fa-instagram"></i></a>
                             </div>
                         </div>
